AFS_Dev/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>TaskType__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Call Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Shaping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Satisfaction Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Call Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Shaping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teaming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Satisfaction Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_desc__c</fullName>
        <label>Test desc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test_box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>test box</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>